[package]
name = "bugs-bounty"
version = "0.1.0"
authors = ["justin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rweb = "0.4.2"
tokio = "0.2.11"
sqlx =  { version = "0.2.5",  default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
anyhow = "1.0.26"
serde = "1.0.104"
serde_json = "1.0.48"
chrono =  { version = "0.4.10", features = ["serde"] }
futures = "0.3.4"
